--- a/chat/src/main/res/layout/edit_share_message.xml
+++ b/chat/src/main/res/layout/edit_share_message.xml
@@ -12,7 +12,6 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:paddingRight="10dp">
@@ -50,11 +49,12 @@
         android:layout_marginRight="10dp"
         android:padding="10dp"
         android:visibility="gone">
+        <!--android:gravity="center_vertical"-->
         <LinearLayout
+            android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/base_color_text_white"
-            android:gravity="center_vertical"
             android:orientation="horizontal">
             <ImageView
                 android:id="@+id/iv_edit_share_message_url_avatar"
@@ -97,7 +97,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_gravity="center_vertical|"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dp"
             android:layout_toRightOf="@+id/tv_edit_share_message_location_title"
             android:ellipsize="end"
@@ -132,7 +132,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_gravity="center_vertical|"
+            android:layout_gravity="center_vertical"
             android:text="公开"
             android:textColor="@color/base_color_text_grey"
             android:textSize="16sp"/>
