[feature] add score query function

--- a/news/src/main/res/layout/activity_score_query.xml
+++ b/news/src/main/res/layout/activity_score_query.xml
@@ -4,17 +4,16 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/refresh_activity_score_query_refresh">
+        <com.example.commonlibrary.baseadapter.SuperRecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/srcv_activity_score_query_display"/>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="查询结果如下"/>
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tv_activity_score_query_result"/>
-
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
