--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="CustomTheme.Day.Main">
+        <item name="android:windowBackground">@drawable/login_container_bg_02</item>
+    </style>
 </resources>
