--- a/chat/src/main/res/layout/activity_login.xml
+++ b/chat/src/main/res/layout/activity_login.xml
@@ -69,6 +69,18 @@
             android:text="@string/login"
             android:textColor="@color/base_color_text_white"
             android:textSize="18sp"/>
+
+        <Button
+            android:id="@+id/btn_login_main"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:background="@drawable/btn_login_selector"
+            android:gravity="center"
+            android:text="@string/login_main"
+            android:textColor="@color/base_color_text_white"
+            android:textSize="18sp"/>
     </LinearLayout>
 
 
@@ -82,6 +94,7 @@
         android:text="@string/register_text1"
         android:textSize="16sp"/>
     <TextView
+        android:enabled="false"
         android:id="@+id/tv_login_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
