--- a/news/src/main/res/layout/fragment_library.xml
+++ b/news/src/main/res/layout/fragment_library.xml
@@ -38,11 +38,11 @@
                 android:textColorHint="@color/base_color_text_grey"
                 android:textSize="16sp" />
 
-            <TextView
-                android:id="@+id/tv_fragment_library_search"
+            <ImageView
+                android:id="@+id/iv_fragment_library_search"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="搜索"
+                android:src="@drawable/ic_news_search"
                 android:textColor="@color/base_color_text_blue"
                 android:textSize="20sp" />
         </LinearLayout>
