--- a/news/src/main/res/layout/activity_main_news.xml
+++ b/news/src/main/res/layout/activity_main_news.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -11,10 +10,16 @@
         android:layout_height="0dp"
         android:layout_weight="1" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/divider_line_default_color"/>
     <RadioGroup
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:id="@+id/rg_activity_main_bottom_container"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:checkedButton="@+id/rb_activity_main_bottom_index"
         android:gravity="center"
         android:orientation="horizontal">
@@ -25,46 +30,56 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
+            android:drawableTop="@drawable/ic_demo_one"
             android:gravity="center"
+            android:drawablePadding="3dp"
             android:text="首页"
             android:textColor="@color/tab_text_color" />
 
-        <RadioButton
-            android:id="@+id/rb_activity_main_bottom_library"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:button="@null"
-            android:gravity="center"
-            android:text="图书"
-            android:textColor="@color/tab_text_color" />
+        <!--<RadioButton-->
+            <!--android:drawablePadding="3dp"-->
+            <!--android:id="@+id/rb_activity_main_bottom_library"-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1"-->
+            <!--android:button="@null"-->
+            <!--android:drawableTop="@drawable/ic_demo_two"-->
+            <!--android:gravity="center"-->
+            <!--android:text="图书"-->
+            <!--android:textColor="@color/tab_text_color" />-->
 
         <RadioButton
+            android:drawablePadding="3dp"
             android:id="@+id/rb_activity_main_bottom_center"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
+            android:drawableTop="@drawable/ic_demo_three"
             android:gravity="center"
             android:text="中心"
             android:textColor="@color/tab_text_color" />
 
         <RadioButton
+            android:drawablePadding="3dp"
             android:id="@+id/rb_activity_main_bottom_person"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
+            android:drawableTop="@drawable/ic_demo_four"
             android:gravity="center"
             android:text="个人"
             android:textColor="@color/tab_text_color" />
 
         <RadioButton
+            android:drawablePadding="3dp"
             android:id="@+id/rb_activity_main_bottom_chat"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
+            android:drawableTop="@drawable/ic_demo_five"
             android:gravity="center"
             android:text="聊天"
             android:textColor="@color/tab_text_color" />
