--- a/chat/src/main/res/layout/fragment_share_info.xml
+++ b/chat/src/main/res/layout/fragment_share_info.xml
@@ -6,7 +6,8 @@
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/refresh_fragment_share_info_refresh">
         <com.example.commonlibrary.baseadapter.SuperRecyclerView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
