--- a/chat/src/main/res/layout/item_fragment_share_info.xml
+++ b/chat/src/main/res/layout/item_fragment_share_info.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginBottom="20dp"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -36,10 +37,11 @@
                     android:layout_height="wrap_content"
                     android:text="无聊的->人类"/>
                 <ImageView
+                    android:layout_marginLeft="10dp"
                     android:id="@+id/iv_item_fragment_share_info_sex"
                     android:scaleType="centerInside"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="15dp"
+                    android:layout_height="15dp"
                     android:src="@drawable/ic_sex_female"
                     />
 
@@ -66,6 +68,8 @@
     </RelativeLayout>
 
     <TextView
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxLines="5"
@@ -79,6 +83,7 @@
         android:id="@+id/vs_item_fragment_share_info_stub"/>
 
     <View
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="1px"
         android:background="@color/divider_line_default_color"/>
@@ -124,6 +129,10 @@
             android:text="32"/>
 
     </RelativeLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@color/divider_line_default_color"/>
 
 
 </LinearLayout>
