--- a/chat/src/main/res/layout/item_activity_comment_list.xml
+++ b/chat/src/main/res/layout/item_activity_comment_list.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     >
 
     <com.example.commonlibrary.cusotomview.RoundAngleImageView
@@ -26,12 +27,27 @@
 
 
 
-        <!--todo-->
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tv_item_activity_comment_list_name"
-            android:textColor="@color/black"/>
+            android:orientation="horizontal"
+            android:gravity="center_vertical">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/tv_item_activity_comment_list_name"
+                android:textColor="@color/black"/>
+
+
+            <ImageView
+                android:layout_marginLeft="10dp"
+                android:id="@+id/iv_item_activity_comment_list_sex"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:scaleType="centerCrop"/>
+
+        </LinearLayout>
+
 
 
 
