--- a/chat/src/main/res/layout/item_fragment_share_info.xml
+++ b/chat/src/main/res/layout/item_fragment_share_info.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/white"
     android:layout_marginBottom="20dp"
     android:orientation="vertical">
 
