[fix] ImageList didn't display while refreshing post list

--- a/chat/src/main/res/layout/activity_login.xml
+++ b/chat/src/main/res/layout/activity_login.xml
@@ -94,7 +94,7 @@
         android:text="@string/register_text1"
         android:textSize="16sp"/>
     <TextView
-        android:enabled="false"
+        android:enabled="true"
         android:id="@+id/tv_login_register"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
