--- a/chat/src/main/res/layout/item_fragment_share_info_image.xml
+++ b/chat/src/main/res/layout/item_fragment_share_info_image.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.example.chat.view.ListImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.example.commonlibrary.baseadapter.SuperRecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"/>
+    android:layout_height="wrap_content" />
