--- a/news/src/main/res/layout/item_activity_special_news_header.xml
+++ b/news/src/main/res/layout/item_activity_special_news_header.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/base_color_text_grey"
+    android:background="@color/grey_100"
     android:orientation="vertical">
     <TextView
         android:maxLines="1"
@@ -11,7 +11,7 @@
         android:paddingTop="10dp"
         android:layout_marginLeft="10dp"
         android:text="标题"
-        android:textColor="@color/base_color_text_black"
+        android:textColor="@color/black"
         android:textSize="16sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
