--- a/chat/src/main/res/layout/activity_user_detail.xml
+++ b/chat/src/main/res/layout/activity_user_detail.xml
@@ -20,13 +20,12 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
         android:layout_marginBottom="15dp"
-        android:layout_marginRight="15dp"
         android:scaleType="centerCrop"
         app:borderWidth="0dp"
-        app:elevation="15dp"
-    />
+        app:elevation="30dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="15dp" />
     <LinearLayout
         android:layout_alignParentBottom="true"
         android:id="@+id/ll_user_detail_bottom"
