[fix,feature] 修复马院的新闻展示界面，在PresonFragment新增settings,user表中新增学籍信息,修复评论刷新时间

--- a/news/src/main/res/layout/item_fragment_center.xml
+++ b/news/src/main/res/layout/item_fragment_center.xml
@@ -3,14 +3,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_horizontal"
+    android:background="#ECF1F5"
     android:orientation="vertical">
     <ImageView
         android:id="@+id/item_fragment_center_icon"
         android:scaleType="centerCrop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:src="@mipmap/ic_launcher"/>
     <TextView
+        android:layout_marginTop="5dp"
         android:id="@+id/tv_item_fragment_center_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
