--- a/news/src/main/res/layout/fragment_person.xml
+++ b/news/src/main/res/layout/fragment_person.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ECF1F5"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
@@ -21,9 +22,6 @@
             app:roundWidth="30dp"
             android:layout_centerInParent="true"
             android:src="@mipmap/ic_launcher_round"/>
-
-
-
         <TextView
             android:textColor="@color/red_500"
             android:layout_marginTop="10dp"
@@ -38,7 +36,88 @@
 
 
 
+    <RelativeLayout
+        android:id="@+id/rl_fragment_person_edit"
+        android:layout_marginTop="20dp"
+        android:background="@color/white"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_news_settings"
+            android:textSize="16sp"
+            android:text="个人资料"
+            android:textColor="@color/black"
+            android:drawablePadding="10dp"
+            android:gravity="center"/>
 
+
+        <ImageView
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_arrow_right"/>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/rl_fragment_person_index"
+        android:layout_marginTop="10dp"
+        android:background="@color/white"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_news_settings"
+            android:textSize="16sp"
+            android:text="个人主页"
+            android:textColor="@color/black"
+            android:drawablePadding="10dp"
+            android:gravity="center"/>
+
+
+        <ImageView
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_arrow_right"/>
+
+    </RelativeLayout>
+
+
+
+
+    <RelativeLayout
+        android:id="@+id/rl_fragment_person_settings"
+        android:layout_marginTop="10dp"
+        android:background="@color/white"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_news_settings"
+            android:textSize="16sp"
+            android:text="设置"
+            android:textColor="@color/black"
+            android:drawablePadding="10dp"
+            android:gravity="center"/>
+
+
+        <ImageView
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_arrow_right"/>
+
+    </RelativeLayout>
 
 
 
