--- a/chat/src/main/res/layout/activity_user_detail.xml
+++ b/chat/src/main/res/layout/activity_user_detail.xml
@@ -1,58 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    android:id="@+id/rl_activity_user_detail_container"
+<LinearLayout
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
-     <android.support.v4.widget.SwipeRefreshLayout
-         android:id="@+id/refresh_activity_user_detail_refresh"
-         android:layout_width="match_parent"
-                                                   android:layout_height="wrap_content">
-         <com.example.commonlibrary.baseadapter.SuperRecyclerView
-             android:id="@+id/rcv_activity_user_detail_display"
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content">
-         </com.example.commonlibrary.baseadapter.SuperRecyclerView>
-     </android.support.v4.widget.SwipeRefreshLayout>
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_activity_user_detail_button"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="15dp"
-        android:scaleType="centerCrop"
-        app:borderWidth="0dp"
-        app:elevation="30dp"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="15dp" />
-    <LinearLayout
-        android:layout_alignParentBottom="true"
-        android:id="@+id/ll_user_detail_bottom"
+    <include layout="@layout/view_activity_user_detail_header"/>
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tl_activity_user_detail_tab"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#f6f6f6"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        android:padding="8dp"
-        android:visibility="gone">
+        android:layout_height="50dp"/>
+    <com.example.commonlibrary.cusotomview.WrappedViewPager
+        android:id="@+id/vp_activity_user_detail_display"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
-        <EditText
-            android:id="@+id/et_user_detail_input"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@null"
-            android:hint="说点什么呢........"
-            android:textColorHint="@color/base_color_text_blue"/>
-        <ImageView
-            android:id="@+id/iv_user_detail_send"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/selector_comment_send"/>
-    </LinearLayout>
-
-
-
-
-</RelativeLayout>
+</LinearLayout>
