--- a/news/src/main/res/layout/item_view_fragment_index_pop.xml
+++ b/news/src/main/res/layout/item_view_fragment_index_pop.xml
@@ -2,6 +2,7 @@
 <TextView android:layout_width="wrap_content"
     android:layout_margin="5dp"
     android:layout_height="wrap_content"
+    android:gravity="center"
     android:background="@drawable/custom_selector_text_bg"
     android:textColor="@drawable/custom_selector_text_color"
     android:id="@+id/item_view_fragment_index_pop_content"
