--- a/news/src/main/res/layout/fragment_person.xml
+++ b/news/src/main/res/layout/fragment_person.xml
@@ -121,4 +121,33 @@
 
 
 
+    <RelativeLayout
+        android:id="@+id/rl_fragment_person_notify"
+        android:layout_marginTop="10dp"
+        android:background="@color/white"
+        android:padding="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_news_settings"
+            android:textSize="16sp"
+            android:text="系统通知"
+            android:textColor="@color/black"
+            android:drawablePadding="10dp"
+            android:gravity="center"/>
+
+
+        <ImageView
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_arrow_right"/>
+
+    </RelativeLayout>
+
+
+
 </LinearLayout>
