--- a/chat/src/main/res/layout/activity_edit_share_info.xml
+++ b/chat/src/main/res/layout/activity_edit_share_info.xml
@@ -114,16 +114,16 @@
         <!--android:layout_marginTop="20dp"-->
         <!--android:background="@color/base_color_text_white"-->
         <!--android:padding="10dp">-->
-        <!--<TextView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:drawableLeft="@drawable/ic_visibility_blue_grey_900_24dp"-->
-            <!--android:drawablePadding="20dp"-->
-            <!--android:gravity="center_vertical"-->
-            <!--android:text="谁可以看"-->
-            <!--android:textColor="@color/base_color_text_grey"-->
-            <!--android:textSize="18sp"-->
-            <!--/>-->
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableLeft="@drawable/ic_visibility_blue_grey_900_24dp"
+            android:drawablePadding="20dp"
+            android:gravity="center_vertical"
+            android:text="谁可以看"
+            android:textColor="@color/base_color_text_grey"
+            android:textSize="18sp"
+            />
         <!--<TextView-->
             <!--android:id="@+id/tv_edit_share_message_visibility"-->
             <!--android:layout_width="wrap_content"-->
